# Vector_Graphics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/core/: Command.h  Diagram.h  GraphicsObject.h  ShapeMaker.h  Tool.h
include/io/: SVGWriter.h  XMLParser.h
include/shapes/: Circle.h  Freehand.h  Hexagon.h  Lines.h  Rect.h  RoundRect.h  Text.h
include/ui/: Canvas.h  MainWindow.h
src/core/: Command.cpp  Diagram.cpp  GraphicsObject.cpp  ShapeMaker.cpp
src/io/: SVGWriter.cpp  XMLParser.cpp
src/shapes/: Circle.cpp  Freehand.cpp  Hexagon.cpp  Line.cpp  Rect.cpp  RoundRect.cpp  Text.cpp
src/ui/: Canvas.cpp  MainWindow.cpp  Mouse.cpp  ToolBar.cpp
